new proj/src/objects/GE_OG_DS_Technician_Preference__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_DS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account with the stated preference for this technician.</description>
        <inlineHelpText>Select the account with the stated preference for this technician.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Technician Preferences</relationshipLabel>
        <relationshipName>Technician_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Installed_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Installed Product the Technician is Preferred for.</description>
        <inlineHelpText>Select the Installed Product the Technician is Preferred for.</inlineHelpText>
        <label>Installed Products</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Technician Preferences</relationshipLabel>
        <relationshipName>Technician_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location with the stated preference for this technician.</description>
        <inlineHelpText>Select the location with the stated preference for this technician.</inlineHelpText>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Technician Preferences</relationshipLabel>
        <relationshipName>Technician_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_DS_Technician_Name__c</fullName>
        <description>This is the technician preferred by the account, location, or Installed Product.</description>
        <inlineHelpText>Select the technician preferred by the account, location, or Installed Product.</inlineHelpText>
        <label>Technician Name</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Technician Preferred By</relationshipLabel>
        <relationshipName>Technician_Preferences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Technician Preference</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Technician Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technician Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>